# whisk

./: .gitignore  Cargo.toml  license.md  readme.md  todo.md
docs/: manifest.md  profiles.md  targets.md  whisk.schema.json
examples/test/: whisk.toml
examples/test-err/: whisk.toml
examples/test-err/src/: math.cpp
examples/test-lib/: whisk.toml
examples/test-lib/inc/: math.h
examples/test-precomp/: whisk.toml
examples/test-use-lib/: whisk.toml
examples/test/src/: main.cpp
src/: args.rs  cfg.rs  files.rs  main.rs  man.rs
src/cmd/: build.rs  clean.rs  mod.rs  result.rs  run.rs  target.rs  tree.rs
src/file/: walk.rs
src/gcc/: msg.rs
src/term/: color.rs  mod.rs  regex.rs  stream.rs
test/: mix.toml  whisk.toml
test/inc/: math.h
test/src/: main.cpp
