[package]
name = "whisk"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0.4"   # Terminal colors
clap = "4.4.6"      # CLI engine
glob = "0.3.1"      # Used for manifest filepaths

serde = { version = "1.0.189", features = [ "derive" ] }        # Deserialize trait
toml = { version = "0.8.2", features = [ "parse", "display" ] } # Toml parser
crossterm_cursor = "0.4.0"
regex = "1.10.2"
once_cell = "1.18.0"

[profile.dev]
# This isn't required for development builds, but makes development
# build behavior match release builds. To enable unwinding panics
# during development, simply remove this line.
panic = "abort"     # Abort on panic

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary
