[package]
name = "whisk"
version = "0.1.0"
edition = "2021"

[dependencies]
owo-colors = "3.5.0"    # Terminal colors
clap = { version = "4.4.6", default-features = false, features = [ "std", "help", "usage", "cargo" ] } # Command args parser
glob = "0.3.1"          # Used for manifest filepaths

serde = { version = "1.0.189", features = [ "derive" ] }    # Deserialize trait
toml = "0.8.2"          # Toml parser
clap_complete = "4.4.4"

[profile.dev]
# This isn't required for development builds, but makes development
# build behavior match release builds. To enable unwinding panics
# during development, simply remove this line.
panic = "abort"     # Abort on panic

[profile.release]
opt-level = 3       # Optimize for speed
lto = true          # Enable link time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary
